# auto-faulthandler

./: .gitignore  LICENSE  README.md  auto_faulthandler.py  pyproject.toml  test_crash.py
