[build-system]
requires = ["hatchling", "hatch-autorun"]
build-backend = "hatchling.build"

[project]
name = "auto-faulthandler"
version = "1.0.0"
description = "Automatically enable Python's faulthandler for extension development."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/mrexodia/auto-faulthandler"

[tool.hatch.build.targets.wheel.hooks.autorun]
dependencies = ["hatch-autorun"]
code = "import auto_faulthandler"

[tool.hatch.build.targets.wheel]
packages = ["auto_faulthandler.py"]
